Fix/epmrpp 97281 long name does not fit (#4108)
* EPMRPP-97281 || Long name of organization doesn't fit

* EPMRPP-97281 || add padding

--- a/app/src/pages/inside/profilePage/assignedProjectsBlock/assignedProjectsBlock.scss
+++ b/app/src/pages/inside/profilePage/assignedProjectsBlock/assignedProjectsBlock.scss
@@ -21,16 +21,16 @@
 }
 
 .name-col {
-  display: flex;
-  align-items: center;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   text-transform: uppercase;
+  padding-right: 8px;
 }
 
 .role-col {
   width: 118px;
+  min-width: 118px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
